Updated controller for socialmodal